--- a/css/style.css
+++ b/css/style.css
@@ -2,32 +2,27 @@
     --primary-bg: #fff8e7;
     --text-color: #333;
     --accent-color: #FF6B6B;
-    --container-width: 1200px;
+    --container-width: 1100px;
     --background-color: #fff8e7;
+    --pri-gray: #eaeaea;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 body {
     font-family: 'Inter', sans-serif;
-    background-color: var(--background-color);
+    background-color: var(--pri-gray);
     color: var(--text-color);
     line-height: 1.6;
 }
 
 .container {
     max-width: var(--container-width);
-    margin: 0 auto;
-    padding: 0 20px;
+    margin: 2rem auto;
+  
+    
 }
 
-section {
-    padding: 80px 0;
-}
+
 
 h1, h2, h3 {
     margin-bottom: 20px;
@@ -47,13 +42,13 @@ p {
     margin-bottom: 15px;
 }
 
-img {
-    max-width: 100%;
-    height: auto;
-}
+
 
 .footer {
     text-align: center;
     padding: 20px 0;
     background-color: rgba(0, 0, 0, 0.1);
+}
+.block-dis{
+    display: block;
 }
